--- a/style.css
+++ b/style.css
@@ -82,17 +82,20 @@ body {
   font-weight: 700;
 }
 
-:-moz-placeholder { /* Firefox 18- */
-  font-weight: 700;  
+:-moz-placeholder {
+  /* Firefox 18- */
+  font-weight: 700;
 }
 
-::-moz-placeholder {  /* Firefox 19+ */
-  font-weight: 700;  
+::-moz-placeholder {
+  /* Firefox 19+ */
+  font-weight: 700;
 }
 
-:-ms-input-placeholder {  
-  font-weight: 700;  
+:-ms-input-placeholder {
+  font-weight: 700;
 }
+
 .btn-tryit {
   width: 90%;
   white-space: normal;
@@ -125,9 +128,9 @@ body {
   font-size: 12px;
 }
 
-.span-2{
+.span-2 {
   font-weight: 700;
-  color:hsl(0, 100%, 74%);
+  color: hsl(0, 100%, 74%);
 }
 
 .container {
@@ -137,4 +140,79 @@ body {
   padding-top: 1rem;
   margin-bottom: 1.5rem;
   box-shadow: 0 8px 6px -6px hsl(249, 10%, 26%);
+}
+
+.input-error {
+  background-repeat: no-repeat;
+  background-image: url(images/icon-error.svg);
+  background-position: 95% center;
+  border: 2px solid red !important;
+}
+.text-error {
+  font-size: 13px;
+  text-align: right;
+  color: red;
+  font-style: italic;
+  font-weight: 600;
+  margin-bottom: 0 !important;
+}
+
+@media (min-width: 768px) {
+  .heading {
+    padding: 10% 5% 0 5%;
+  }
+
+  .text {
+    padding: 5% 5% 10%;
+    font-size: 1.25rem;
+  }
+
+  .form-group {
+    margin-bottom: 1rem;
+  }
+
+  .btn {
+    font-size: 1.25rem;
+    padding: 2%;
+  }
+
+  .btn-trial {
+    margin-top: 2rem;
+  }
+
+  .text-muted {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .flex-1 {
+    display: flex;
+
+  }
+
+  .title {
+    text-align: left;
+    width: 50vw;
+    margin: 0 0 0 5%;
+  }
+
+  .heading {
+    padding: 30% 0 5% 0;
+    font-size: 3rem;
+  }
+
+  .text {
+    margin: 0;
+    padding: 0%;
+  }
+
+  .form-container {
+    width: 50vw;
+    margin: 0 5%;
+  }
+
+  .btn-tryit {
+    margin-top: 4rem;
+  }
 }
